september 2017
	- 1.4.2
	- fix spelling errors in manpage
	- fix build

septembre 2017
	- 1.4
	- terminal resizing support
	- fix build

novembre 2016:
	- mark cursor position in both HEX and ASCII
	- skip whitespace when parsing hex-strings

march 2014:
	- fix small but in DIE() which was leaving the terminal in a bad state
	- added --linelength <n> / -l<n> command line option

february 2013:
	- fix displaying sector number when above 2^31
	- fix potential file descriptor leak (thanks to Rich Burridge)
	- add DESTDIR support to the makefiles
	- preprocessor flags should use CPPFLAGS, not CFLAGS
	- fix a small issue in mymemmem/mymemrmem when HAVE_MEMMEM/HAVE_MEMRMEM is not defined

september 2005:
	- version 1.2.12
	- colored (fruit salad) display built by default (if use_default_colors available), 
	  available through option --color (based on a patch from Yuri D'Elia)

september 2005:
	- version 1.2.11
	- add --enable-colors to build and have a colored (fruit salad) display 
	- allow entering goto "position" and "sector" in hexadecimal or not
	- when prompting, propose previously entered value, and give ability to modify it
	- fix setting mark after scrolling
	- some cleanup

may 2004:
	- version 1.2.10
	- handle getnstr() not defined (needed for SGI IRIX 6.5.22)

april 2004:
	- version 1.2.9 (brown paper bag version)
	- fix searching larger than 3 characters long strings

january 2004:
	- version 1.2.8
	- replace the unsafe getstr() with getnstr() (thanks to Richard Chadderton)

august 2003:
	- version 1.2.7
	- check the presence of <sys/mount.h> before including it
	- fix build on Digital UNIX 4.0f (remove -Wall)
	- use the full width of the terminal (the trick is to stop relying on
	printing "\n", but using move() instead)
	- fix displaying the offsets at beginning of each line on big endian
	boxes (thanks to Martin Schaffner)

june 2003:
	- version 1.2.6
	- fix core dump when searching backward (thanks to Jean Delvare)